{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 14,
  "lineage": "0503d1f4-e4c4-48b2-bf53-f1579a6adcdb",
  "resources": [
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00236b867ae0d9c17",
            "arn": "arn:aws:ec2:us-east-1:637423486709:instance/i-090f36344fda47c66",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-090f36344fda47c66",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06a69dfd8905728b7"
              }
            ],
            "primary_network_interface_id": "eni-06a69dfd8905728b7",
            "private_dns": "ip-10-0-1-51.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.51",
            "public_ip": "3.84.90.136",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07431669b6edf7294",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05fa9c641f2fa7059",
            "tags": {
              "Environment": "dev",
              "Name": "dev-web-server"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ed8c952cf9d8d7f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423486709",
            "id": "i-090f36344fda47c66",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.web.aws_security_group.web_sg",
            "module.web.aws_subnet.public",
            "module.web.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423486709:internet-gateway/igw-00ff1e009d75a3916",
            "id": "igw-00ff1e009d75a3916",
            "owner_id": "637423486709",
            "region": "us-east-1",
            "vpc_id": "vpc-0f747b7f0124aeedc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00ff1e009d75a3916",
            "id": "r-rtb-03500d50dc662b5d71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-03500d50dc662b5d7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423486709",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-03500d50dc662b5d7"
          },
          "dependencies": [
            "module.web.aws_internet_gateway.igw",
            "module.web.aws_route_table.public_rt",
            "module.web.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423486709:route-table/rtb-03500d50dc662b5d7",
            "id": "rtb-03500d50dc662b5d7",
            "owner_id": "637423486709",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00ff1e009d75a3916",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f747b7f0124aeedc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423486709",
            "id": "rtb-03500d50dc662b5d7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.web.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c8a22ba4d3fcf26",
            "region": "us-east-1",
            "route_table_id": "rtb-03500d50dc662b5d7",
            "subnet_id": "subnet-05fa9c641f2fa7059"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423486709",
            "id": "rtbassoc-08c8a22ba4d3fcf26",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.web.aws_route_table.public_rt",
            "module.web.aws_subnet.public",
            "module.web.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423486709:security-group/sg-05ed8c952cf9d8d7f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ed8c952cf9d8d7f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260419065355627400000002",
            "name_prefix": "terraform-",
            "owner_id": "637423486709",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f747b7f0124aeedc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423486709",
            "id": "sg-05ed8c952cf9d8d7f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.web.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423486709:subnet/subnet-05fa9c641f2fa7059",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fa9c641f2fa7059",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423486709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-subnet"
            },
            "vpc_id": "vpc-0f747b7f0124aeedc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423486709",
            "id": "subnet-05fa9c641f2fa7059",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.web.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423486709:vpc/vpc-0f747b7f0124aeedc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-034f9b1b9a382f4f8",
            "default_route_table_id": "rtb-0f7cedf837d31d93a",
            "default_security_group_id": "sg-02fec35341d2c3c6e",
            "dhcp_options_id": "dopt-053ad0ab8b35e3eaa",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f747b7f0124aeedc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f7cedf837d31d93a",
            "owner_id": "637423486709",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev_vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423486709",
            "id": "vpc-0f747b7f0124aeedc",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}